--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,96 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.fact__text {
+  font-size: 1.4rem;
+  font-weight: 600;
+  text-align: left;
+  line-height: 1.2;
+  padding: 28% 7.5% 0 7.5%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fact__container {
+  display: flex;
+  height: 100vh;
+  margin: 0;
+  align-items: flex-start;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.nav__container {
+  display: flex;
+  height: 100vh;
+  margin: 0;
+  align-items: left;
+  background-color: white;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+.nav__item {
+  text-align: left;
+  padding: 3px 0;
 }
 
-.read-the-docs {
-  color: #888;
+#gave-away {
+  background-color: #f44336;
+}
+#immigrated {
+  background-color: #e81e63;
+}
+#steel {
+  background-color: #9c27b0;
+}
+#medal {
+  background-color: #673ab7;
+}
+#dinosaur {
+  background-color: #3f51b5;
+}
+#second-richest {
+  background-color: #2196f3;
+}
+#fortune {
+  background-color: #03a9f4;
+}
+#carnegie-steel {
+  background-color: #00bcd4;
+}
+#homestead-strike {
+  background-color: #009688;
+}
+#short {
+  background-color: #4caf50;
+}
+#scottish {
+  background-color: #8bc34a;
+  color: rgba(0, 0, 0, 0.8);
+}
+#philanthropist {
+  background-color: #cddc39;
+  color: rgba(0, 0, 0, 0.8);
+}
+#marriage {
+  color: rgba(0, 0, 0, 0.8);
+  background-color: #ffeb3b;
+}
+#braddock {
+  color: rgba(0, 0, 0, 0.8);
+  background-color: #ffc107;
+}
+#death {
+  background-color: #ff9800;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+#daughter {
+  background-color: #ff5722;
+  color: rgba(0, 0, 0, 0.8);
+}
+#jobs {
+  background-color: #ffffff;
+  color: rgba(0, 0, 0, 0.8);
+}
+#parents {
+  background-color: #000000;
 }
