--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,10 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
+  color: black;
+  margin-left: 30px
 }
 
 button {
