--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,10 @@ body {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.1;
   color: black;
-  margin-left: 30px
+  margin: 15px auto 0 auto;
 }
 
 button {
